fix: fix popup z-index

--- a/index.css
+++ b/index.css
@@ -53,7 +53,7 @@
   bottom: 0;
   left: 0;
   right: 0;
-  z-index: 1001;
+  z-index: 9999;
   transition: transform 0.4s linear;
   transform: translateY(100%);
   background-color: #fff;
